kubernetes/clusters/kenobi/auth/keycloak/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak

spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: keycloak
