kubernetes/clusters/kenobi/auth/keycloak/stateful-set.patch.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: keycloak

spec:
  template:
    spec:
      containers:
        - name: keycloak
