kubernetes/clusters/kenobi/auth/keycloak/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway

metadata:
  name: auth-gateway

spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: auth-feldman-tech-tls
      hosts:
        - auth.feldman.tech
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: auth

spec:
  hosts:
    - auth.feldman.tech
  gateways:
    - auth-gateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: keycloak
