kubernetes/clusters/kenobi/auth/keycloak/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`auth.feldman.tech`)
      kind: Rule
      services:
        - name: keycloak
          port: 80
  tls:
    secretName: auth-feldman-tech-tls
